--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Colling-Media\\Laravel\\Http\\Middleware\\": "src"
+            "CollingMedia\\Laravel\\Http\\Middleware\\": "src"
         }
     },
     "extra": {
